Full Copy'ing a scene confuses physics in the original scene #90246

Closed
opened 2021-07-27 19:59:16 +02:00 by Shish · 9 comments

System Information
Operating system: Windows
Graphics card: GTX 1080

Blender Version
Broken: 2.93

    1. Took this .blend file from an online competition. Hit "play", the ball falls down according to regular physics.
    1. Delete and re-bake the animation. Hit "play", the ball still falls down.
    1. Scene -> Full Copy. Delete and re-bake the animation (in either the original scene or the copy). Hit "play", now the ball jumps up and sideways.

Uploaded each step as a separate .blend so you can just hit "play" on each file and see that originally and before full-copy-ing, the ball falls down; but after making a copy, the ball jumps sideways.

01-original.blend

02-delete-all-bake-all.blend

03-full-copy-delete-copy-delete-all-bake-all.blend

**System Information** Operating system: Windows Graphics card: GTX 1080 **Blender Version** Broken: 2.93 - 1) Took this .blend file from an online competition. Hit "play", the ball falls down according to regular physics. - 2) Delete and re-bake the animation. Hit "play", the ball still falls down. - 3) Scene -> Full Copy. Delete and re-bake the animation (in either the original scene or the copy). Hit "play", now the ball jumps up and sideways. Uploaded each step as a separate .blend so you can just hit "play" on each file and see that originally and before full-copy-ing, the ball falls down; but after making a copy, the ball jumps sideways. [01-original.blend](https://archive.blender.org/developer/F10241464/01-original.blend) [02-delete-all-bake-all.blend](https://archive.blender.org/developer/F10241465/02-delete-all-bake-all.blend) [03-full-copy-delete-copy-delete-all-bake-all.blend](https://archive.blender.org/developer/F10241466/03-full-copy-delete-copy-delete-all-bake-all.blend)
Author

Added subscriber: @shish_blender

Added subscriber: @shish_blender

#76588 was marked as duplicate of this issue

#76588 was marked as duplicate of this issue

Added subscribers: @Edgar_Hu, @mano-wii

Added subscribers: @Edgar_Hu, @mano-wii
Member

Added subscribers: @ZedDB, @mont29, @lichtwerk

Added subscribers: @ZedDB, @mont29, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Problem in that file/example is that indeed (as mentioned in #76588) the Rigid Body World is not duplicated.
This results in the situation that the copies of all objects participate in the same rigid body world sim (even though they might not be in the view layer), and since these all overlap, we get explosions or hoppin to the side as in this case.

image.png

In general, it seems possible to have multiple rigidbody worlds (one in each different scene) -- although other reports suggest that there are parts in the code that still assume only one rigid body world being present (see e.g. #62005)
#90246 multiple RB worlds.blend

So I guess we have to ask:

    • @ZedDB : are you aware of the "only one RB world" limitation? (or should it be supported to have one RB world per scene - as in my example [which seems to work fine])
    • @mont29: if one RB world per scene is OK, then why are we not duplicating the collection on full scene copy?
Problem in that file/example is that indeed (as mentioned in #76588) the Rigid Body World is not duplicated. This results in the situation that the copies of all objects participate in the same rigid body world sim (even though they might not be in the view layer), and since these all overlap, we get explosions or hoppin to the side as in this case. ![image.png](https://archive.blender.org/developer/F10264879/image.png) In general, it seems possible to have multiple rigidbody worlds (one in each different scene) -- although other reports suggest that there are parts in the code that still assume only one rigid body world being present (see e.g. #62005) [#90246 multiple RB worlds.blend](https://archive.blender.org/developer/F10265068/T90246_multiple_RB_worlds.blend) So I guess we have to ask: - - [x] @ZedDB : are you aware of the "only one RB world" limitation? (or should it be supported to have one RB world per scene - as in my example [which seems to work fine]) - - [x] @mont29: if one RB world per scene is OK, then why are we not duplicating the collection on full scene copy?
Member

Seems like this was tackled at some point, see 2043d801e8

Seems like this was tackled at some point, see 2043d801e8

This issue was referenced by 1a72744ddc

This issue was referenced by 1a72744ddc4a34ce32f308a9011423c2099b49d3

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Bastien Montagne self-assigned this 2021-09-30 16:05:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90246
No description provided.